--- a/openpdf/src/main/java/com/lowagie/text/error_messages/en.lng
+++ b/openpdf/src/main/java/com/lowagie/text/error_messages/en.lng
@@ -26,6 +26,7 @@
 1.unsupported.jpeg.marker.2={1}: unsupported JPEG marker: {2}
 a.pattern.can.not.be.used.as.a.template.to.create.an.image=A pattern can not be used as a template to create an image.
 a.pdfx.conforming.document.cannot.be.encrypted=A PDFX conforming document cannot be encrypted.
+the.pdf.conformance.for.this.document.does.not.allow.encryption=The PDF conformance for this document does not allow encryption
 a.string.1.was.passed.in.state.only.on.off.and.toggle.are.allowed=A string '{1} was passed in state. Only 'ON', 'OFF' and 'Toggle' are allowed.
 a.tab.position.may.not.be.lower.than.0.yours.is.1=A tab position may not be lower than 0; yours is {1}
 a.table.should.have.at.least.1.column=A table should have at least 1 column.
@@ -248,7 +249,7 @@ pdf.header.not.found=PDF header signature not found.
 pdf.startxref.not.found=PDF startxref not found.
 pdfpcells.can.t.have.a.rowspan.gt.1=PdfPCells can't have a rowspan > 1
 pdfreader.not.opened.with.owner.password=PdfReader not opened with owner password
-pdfx.conformance.can.only.be.set.before.opening.the.document=PDFX conformance can only be set before opening the document.
+pdf.conformance.can.only.be.set.before.opening.the.document=PDF conformance can only be set before opening the document.
 planar.images.are.not.supported=Planar images are not supported.
 png.filter.unknown=PNG filter unknown.
 preclose.must.be.called.first=preClose() must be called first.
