--- a/openpdf/src/main/java/com/lowagie/text/error_messages/nl.lng
+++ b/openpdf/src/main/java/com/lowagie/text/error_messages/nl.lng
@@ -248,7 +248,7 @@ pdf.header.not.found=PDF header niet gevonden.
 pdf.startxref.not.found=PDF startxref niet gevonden.
 pdfpcells.can.t.have.a.rowspan.gt.1=PdfPCells kunnen geen rowspan groter dan 1 hebben
 pdfreader.not.opened.with.owner.password=PdfReader werd niet geopend met het 'owner password'
-pdfx.conformance.can.only.be.set.before.opening.the.document=PDFX conformantie kan enkel bepaald worden voor het document geopend wordt.
+pdf.conformance.can.only.be.set.before.opening.the.document=PDF conformantie kan enkel bepaald worden voor het document geopend wordt.
 planar.images.are.not.supported=Planar images worden niet ondersteund.
 png.filter.unknown=onbekende PNG filter.
 preclose.must.be.called.first=preClose() moet eerst gebeuren.
