--- a/openpdf/src/main/resources/com/lowagie/text/error_messages/en.lng
+++ b/openpdf/src/main/resources/com/lowagie/text/error_messages/en.lng
@@ -250,7 +250,7 @@ pdf.header.not.found=PDF header signature not found.
 pdf.startxref.not.found=PDF startxref not found.
 pdfpcells.can.t.have.a.rowspan.gt.1=PdfPCells can't have a rowspan > 1
 pdfreader.not.opened.with.owner.password=PdfReader not opened with owner password
-pdfx.conformance.can.only.be.set.before.opening.the.document=PDFX conformance can only be set before opening the document.
+pdf.conformance.can.only.be.set.before.opening.the.document=PDF conformance can only be set before opening the document.
 planar.images.are.not.supported=Planar images are not supported.
 png.filter.unknown=PNG filter unknown.
 preclose.must.be.called.first=preClose() must be called first.
